[gd_scene load_steps=36 format=2]

[ext_resource path="res://Recursos/ModoSingle/Mapa1.png" type="Texture" id=1]
[ext_resource path="res://Recursos/TileMap2/Cuadrado/TileMap2_06.png" type="Texture" id=2]
[ext_resource path="res://Recursos/TileMap2/Cuadrado/TileMap2_03.png" type="Texture" id=3]
[ext_resource path="res://Recursos/TileMap2/Cuadrado/TileMap2_05.png" type="Texture" id=4]
[ext_resource path="res://Recursos/TileMap2/Cuadrado/TileMap2_04.png" type="Texture" id=5]
[ext_resource path="res://Recursos/TileMap2/Cuadrado/TileMap2_02.png" type="Texture" id=6]
[ext_resource path="res://Recursos/TileMap2/Cuadrado/TileMap2_01.png" type="Texture" id=7]
[ext_resource path="res://Recursos/pinguinos/PinguinoFrente/animtestGrisTiro.png" type="Texture" id=8]
[ext_resource path="res://Escenas/EscenaFinal.gd" type="Script" id=9]
[ext_resource path="res://Recursos/ModoSingle/Iglu.png" type="Texture" id=10]
[ext_resource path="res://Recursos/pinguinos/PinguinoFrente/animtestRosaTiro.png" type="Texture" id=11]
[ext_resource path="res://Recursos/pinguinos/PinguinoFrente/animtestNaranjaTiro.png" type="Texture" id=12]
[ext_resource path="res://Recursos/pinguinos/PinguinoFrente/animtestVerdeTiro.png" type="Texture" id=13]
[ext_resource path="res://Recursos/ModoSingle/cora2.png" type="Texture" id=14]
[ext_resource path="res://Recursos/ModoSingle/cora1.png" type="Texture" id=15]
[ext_resource path="res://fuentes/Fuentee.tres" type="DynamicFont" id=16]
[ext_resource path="res://fuentes/28 Days Later.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://Recursos/BGM/Vicoria.ogg" type="AudioStream" id=18]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 32, 32, 0, 32, 0, 32, 32, 32 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=8]
0/name = "TileMap2_01.png 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "TileMap2_02.png 1"
1/texture = ExtResource( 6 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "TileMap2_03.png 2"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 3 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "TileMap2_04.png 3"
3/texture = ExtResource( 5 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 4 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "TileMap2_06.png 4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 6 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "TileMap2_05.png 5"
5/texture = ExtResource( 4 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 7 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0

[sub_resource type="CapsuleShape2D" id=9]
radius = 25.0029
height = 134.572

[sub_resource type="Animation" id=10]
resource_name = "correr"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=11]
resource_name = "correr"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=12]
resource_name = "correr"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=13]
resource_name = "correr"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=14]
resource_name = "cora2"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 5, 4, 3, 2, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.364706 ), Color( 1, 1, 1, 0.584314 ), Color( 1, 1, 1, 0.854902 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "cora1"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:vframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 5, 4, 3, 2, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.901961, 0.384314, 0.384314, 0.466667 ), Color( 0.901961, 0.384314, 0.384314, 0.639216 ), Color( 0.901961, 0.384314, 0.384314, 0.0705882 ) ]
}

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 19.3636, 137.356 )

[sub_resource type="DynamicFont" id=17]
size = 40
font_data = ExtResource( 17 )

[node name="EscenaFinal" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mapa1" type="Sprite" parent="."]
position = Vector2( 638.976, 358.948 )
scale = Vector2( 0.674824, 1.0476 )
texture = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 8 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 1179648, 0, 0, 1179649, 1, 0, 1179650, 1, 0, 1179651, 1, 0, 1179652, 1, 0, 1179653, 1, 0, 1179654, 1, 0, 1179655, 1, 0, 1179656, 1, 0, 1179657, 1, 0, 1179658, 1, 0, 1179659, 1, 0, 1179660, 1, 0, 1179661, 1, 0, 1179662, 1, 0, 1179663, 1, 0, 1179664, 1, 0, 1179665, 1, 0, 1179666, 1, 0, 1179667, 1, 0, 1179668, 1, 0, 1179669, 1, 0, 1179670, 1, 0, 1179671, 1, 0, 1179672, 1, 0, 1179673, 1, 0, 1179674, 1, 0, 1179675, 1, 0, 1179676, 1, 0, 1179677, 1, 0, 1179678, 1, 0, 1179679, 1, 0, 1179680, 1, 0, 1179681, 1, 0, 1179682, 1, 0, 1179683, 1, 0, 1179684, 1, 0, 1179685, 1, 0, 1179686, 1, 0, 1179687, 1, 0, 1179688, 2, 0, 1245184, 3, 0, 1245185, 5, 0, 1245186, 5, 0, 1245187, 5, 0, 1245188, 5, 0, 1245189, 5, 0, 1245190, 5, 0, 1245191, 5, 0, 1245192, 5, 0, 1245193, 5, 0, 1245194, 5, 0, 1245195, 5, 0, 1245196, 5, 0, 1245197, 5, 0, 1245198, 5, 0, 1245199, 5, 0, 1245200, 5, 0, 1245201, 5, 0, 1245202, 5, 0, 1245203, 5, 0, 1245204, 5, 0, 1245205, 5, 0, 1245206, 5, 0, 1245207, 5, 0, 1245208, 5, 0, 1245209, 5, 0, 1245210, 5, 0, 1245211, 5, 0, 1245212, 5, 0, 1245213, 5, 0, 1245214, 5, 0, 1245215, 5, 0, 1245216, 5, 0, 1245217, 5, 0, 1245218, 5, 0, 1245219, 5, 0, 1245220, 5, 0, 1245221, 5, 0, 1245222, 5, 0, 1245223, 5, 0, 1245224, 4, 0, 1310720, 3, 0, 1310721, 5, 0, 1310722, 5, 0, 1310723, 5, 0, 1310724, 5, 0, 1310725, 5, 0, 1310726, 5, 0, 1310727, 5, 0, 1310728, 5, 0, 1310729, 5, 0, 1310730, 5, 0, 1310731, 5, 0, 1310732, 5, 0, 1310733, 5, 0, 1310734, 5, 0, 1310735, 5, 0, 1310736, 5, 0, 1310737, 5, 0, 1310738, 5, 0, 1310739, 5, 0, 1310740, 5, 0, 1310741, 5, 0, 1310742, 5, 0, 1310743, 5, 0, 1310744, 5, 0, 1310745, 5, 0, 1310746, 5, 0, 1310747, 5, 0, 1310748, 5, 0, 1310749, 5, 0, 1310750, 5, 0, 1310751, 5, 0, 1310752, 5, 0, 1310753, 5, 0, 1310754, 5, 0, 1310755, 5, 0, 1310756, 5, 0, 1310757, 5, 0, 1310758, 5, 0, 1310759, 5, 0, 1310760, 4, 0, 1376256, 3, 0, 1376257, 5, 0, 1376258, 5, 0, 1376259, 5, 0, 1376260, 5, 0, 1376261, 5, 0, 1376262, 5, 0, 1376263, 5, 0, 1376264, 5, 0, 1376265, 5, 0, 1376266, 5, 0, 1376267, 5, 0, 1376268, 5, 0, 1376269, 5, 0, 1376270, 5, 0, 1376271, 5, 0, 1376272, 5, 0, 1376273, 5, 0, 1376274, 5, 0, 1376275, 5, 0, 1376276, 5, 0, 1376277, 5, 0, 1376278, 5, 0, 1376279, 5, 0, 1376280, 5, 0, 1376281, 5, 0, 1376282, 5, 0, 1376283, 5, 0, 1376284, 5, 0, 1376285, 5, 0, 1376286, 5, 0, 1376287, 5, 0, 1376288, 5, 0, 1376289, 5, 0, 1376290, 5, 0, 1376291, 5, 0, 1376292, 5, 0, 1376293, 5, 0, 1376294, 5, 0, 1376295, 5, 0, 1376296, 4, 0, 1441792, 3, 0, 1441793, 5, 0, 1441794, 5, 0, 1441795, 5, 0, 1441796, 5, 0, 1441797, 5, 0, 1441798, 5, 0, 1441799, 5, 0, 1441800, 5, 0, 1441801, 5, 0, 1441802, 5, 0, 1441803, 5, 0, 1441804, 5, 0, 1441805, 5, 0, 1441806, 5, 0, 1441807, 5, 0, 1441808, 5, 0, 1441809, 5, 0, 1441810, 5, 0, 1441811, 5, 0, 1441812, 5, 0, 1441813, 5, 0, 1441814, 5, 0, 1441815, 5, 0, 1441816, 5, 0, 1441817, 5, 0, 1441818, 5, 0, 1441819, 5, 0, 1441820, 5, 0, 1441821, 5, 0, 1441822, 5, 0, 1441823, 5, 0, 1441824, 5, 0, 1441825, 5, 0, 1441826, 5, 0, 1441827, 5, 0, 1441828, 5, 0, 1441829, 5, 0, 1441830, 5, 0, 1441831, 5, 0, 1441832, 4, 0 )

[node name="Iglu" type="Sprite" parent="."]
position = Vector2( 341.49, 416.675 )
scale = Vector2( 1.1172, 1.19721 )
texture = ExtResource( 10 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="." groups=[
"padre",
]]

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
position = Vector2( 132.885, 482.442 )
scale = Vector2( 0.448385, 0.431254 )
texture = ExtResource( 8 )
vframes = 7
hframes = 8
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 142.592, 478.705 )
rotation = 0.262026
shape = SubResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="KinematicBody2D"]
anims/correr = SubResource( 10 )

[node name="Mujer" type="KinematicBody2D" parent="."]
position = Vector2( 1324.38, 0 )
scale = Vector2( -0.999998, 1 )

[node name="Sprite" type="Sprite" parent="Mujer"]
position = Vector2( 132.885, 482.442 )
scale = Vector2( 0.448385, 0.431254 )
texture = ExtResource( 11 )
vframes = 7
hframes = 8
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mujer"]
position = Vector2( 142.592, 478.705 )
rotation = 0.262026
shape = SubResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Mujer"]
anims/correr = SubResource( 11 )

[node name="Hijo1" type="KinematicBody2D" parent="."]
position = Vector2( 995.529, 217.646 )
scale = Vector2( -0.6, 0.625 )

[node name="Sprite" type="Sprite" parent="Hijo1"]
position = Vector2( 132.885, 482.442 )
scale = Vector2( 0.448385, 0.431254 )
texture = ExtResource( 13 )
vframes = 7
hframes = 8
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hijo1"]
position = Vector2( 142.592, 478.705 )
rotation = 0.262026
shape = SubResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Hijo1"]
anims/correr = SubResource( 12 )

[node name="Hijo2" type="KinematicBody2D" parent="."]
position = Vector2( 1124.6, 232.51 )
scale = Vector2( -0.6, 0.6 )

[node name="Sprite" type="Sprite" parent="Hijo2"]
position = Vector2( 132.885, 481.647 )
scale = Vector2( 0.448385, 0.431254 )
texture = ExtResource( 12 )
vframes = 7
hframes = 8
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hijo2"]
position = Vector2( 142.592, 478.705 )
rotation = 0.262026
shape = SubResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Hijo2"]
anims/correr = SubResource( 13 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.348
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 1.423
autostart = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 1.766
autostart = true

[node name="cora2" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.803684 )
position = Vector2( 937.91, 410.971 )
rotation = 0.395773
scale = Vector2( 0.10939, 0.0933084 )
texture = ExtResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="cora2"]
anims/cora2 = SubResource( 14 )

[node name="cora1" type="Sprite" parent="."]
visible = false
modulate = Color( 0.901961, 0.384314, 0.384314, 0.495057 )
position = Vector2( 341.468, 364.589 )
scale = Vector2( 0.122576, 0.127233 )
texture = ExtResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="cora1"]
anims/cora1 = SubResource( 15 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 823.957, 478.557 )
shape = SubResource( 16 )

[node name="Label" type="Label" parent="."]
margin_left = 15.0
margin_top = 6.0
margin_right = 425.0
margin_bottom = 88.0
custom_fonts/font = ExtResource( 16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CONSEGUISTE UN TOTAL DE 20 "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 498.138
margin_top = 8.21532
margin_right = 1000.14
margin_bottom = 90.2153
custom_fonts/font = ExtResource( 16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "KG DE PESCADO PARA TU FAMILIA!!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 435.854
margin_top = 33.5436
margin_right = 489.854
margin_bottom = 94.5436
custom_fonts/font = SubResource( 17 )
text = "15"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
